<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentDetailsActivity">

    <EditText
        android:id="@+id/studentEditLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/StudentDetailsLastNameText"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/studentEditFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/StudentDetailsNameText"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/studentEditSecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/StudentDetailsSNameText"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <CalendarView
        android:id="@+id/studentEditBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/studentEditSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/StudentDetailsEditText"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/studentEditCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/StudentDetailsCancelText"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>